--- a/Covid Updates -KE/Base.lproj/Main.storyboard
+++ b/Covid Updates -KE/Base.lproj/Main.storyboard
@@ -17,8 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CASES OVERVIEW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFj-4D-bQe">
-                                <rect key="frame" x="104" y="74" width="207" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CASES OVERVIEW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFj-4D-bQe">
+                                <rect key="frame" x="228.5" y="74" width="207" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -65,8 +66,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lOR-rT-7DU">
-                                <rect key="frame" x="0.0" y="813" width="415" height="49"/>
+                            <tabBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lOR-rT-7DU">
+                                <rect key="frame" x="0.0" y="813" width="663.5" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="49" id="bgU-we-XPD"/>
@@ -76,22 +77,13 @@
                                     <tabBarItem systemItem="more" id="831-VH-YnJ"/>
                                 </items>
                             </tabBar>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="kenya" translatesAutoresizingMaskIntoConstraints="NO" id="Qzi-rR-Xcm">
-                                <rect key="frame" x="65" y="57" width="285" height="357.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="kenya" translatesAutoresizingMaskIntoConstraints="NO" id="Qzi-rR-Xcm">
+                                <rect key="frame" x="68" y="101" width="279" height="190"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="Qzi-rR-Xcm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="8ei-oy-3Oc"/>
-                            <constraint firstItem="IFj-4D-bQe" firstAttribute="centerX" secondItem="lOR-rT-7DU" secondAttribute="centerX" id="93K-ND-pzF"/>
-                            <constraint firstItem="lOR-rT-7DU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hPb-bf-WfT"/>
-                            <constraint firstItem="IFj-4D-bQe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="hnO-Rr-Xl7"/>
-                            <constraint firstItem="Qzi-rR-Xcm" firstAttribute="top" secondItem="IFj-4D-bQe" secondAttribute="bottom" constant="45" id="jnM-Gx-wLe"/>
-                            <constraint firstItem="lOR-rT-7DU" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="tQH-P7-58A"/>
-                            <constraint firstItem="IFj-4D-bQe" firstAttribute="centerX" secondItem="Qzi-rR-Xcm" secondAttribute="centerX" id="x5f-3a-kKd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qzi-rR-Xcm" secondAttribute="trailing" constant="64" id="xUf-Ut-MEf"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="casesStats" destination="8ki-xL-wrm" id="Ny3-KE-7Ng"/>
