--- a/Covid Updates -KE/Base.lproj/Main.storyboard
+++ b/Covid Updates -KE/Base.lproj/Main.storyboard
@@ -10,6 +10,21 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="MRI-9d-L7R">
+            <objects>
+                <viewController id="Sss-ib-4lz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1W3-yT-xti">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="mph-Vm-bw1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oBD-IF-chg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-667" y="98"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Covid_Stats__KE" customModuleProvider="target" sceneMemberID="viewController">
