--- a/Covid Updates -KE/Base.lproj/Main.storyboard
+++ b/Covid Updates -KE/Base.lproj/Main.storyboard
@@ -76,7 +76,6 @@
                                 </constraints>
                                 <items>
                                     <tabBarItem title="Home" image="house.fill" catalog="system" id="id3-GB-Pno"/>
-                                    <tabBarItem systemItem="more" id="831-VH-YnJ"/>
                                 </items>
                             </tabBar>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kenya" translatesAutoresizingMaskIntoConstraints="NO" id="Qzi-rR-Xcm">
@@ -85,7 +84,7 @@
                                     <constraint firstAttribute="height" constant="190" id="itM-OO-QSn"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="COUNTRY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KF-zE-lCq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="KENYA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KF-zE-lCq">
                                 <rect key="frame" x="68" y="115" width="278" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
